--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
     <div class="modal-content">
       <button class="modal-close" id="closeCategoryModal">✕</button>
       <h3 class="modal-title" id="modalTitle"></h3>
-      <div class="center-btn">
+      <!-- <div class="center-btn">
         <button class="vote-btn" id="link-form">VOTAR CATEGORIA</button>
-      </div>
+      </div> -->
       <div class="nominees-grid" id="modalNominees"></div>
     </div>
   </div>
